--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2004-09-07  Jason Rumney  <jasonr@gnu.org>
+
+	* w32term.h (AppendMenuW_Proc): Move declaration from w32menu.c.
+
+	* w32fns.c (w32_wnd_proc) [WM_MEASUREITEM, WM_DRAWITEM]: Handle
+	Unicode menu titles.
+
 2004-09-07  Kim F. Storm  <storm@cua.dk>
 
 	* xdisp.c (set_cursor_from_row): Fix last change.  Only use 'cursor'
