--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-08  Kim F. Storm  <storm@cua.dk>
+
+	* xdisp.c (set_cursor_from_row): Also look at 'cursor' property in
+	overlay just before point.
+
 2004-09-07  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* buffer.h (struct buffer): Add auto_save_file_format field.
