*** empty log message ***

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-08  Thien-Thi Nguyen  <ttn@gnu.org>
 
+	* startup.el (command-line-1): Make option
+	--directory/-L modify `load-path' straight away.
+
+2004-09-08  Thien-Thi Nguyen  <ttn@gnu.org>
+
 	* progmodes/grep.el (grep-mode): Use normal autoload cookie.
 
 2004-09-08  Thien-Thi Nguyen  <ttn@gnu.org>
