--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,9 @@
 2004-09-08  Thien-Thi Nguyen  <ttn@gnu.org>
 
+	* subr.el (split-string): Docfix.
+
+2004-09-08  Thien-Thi Nguyen  <ttn@gnu.org>
+
 	* emacs-lisp/bytecomp.el (byte-compile-generate-call-tree): Doc fix.
 	(display-call-tree): Ensure newline after caller/calls blocks.
 
