--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-08  Dhruva Krishnamurthy  <dhruva.krishnamurthy@gmail.com>  (tiny change)
+
+	* makefile.w32-in: Fix PGG and Sieve entries.
+
 2004-09-03  Juri Linkov  <juri@jurta.org>
 
 	* search.texi (Incremental Search): Update wording for M-%.
