--- a/etc/NEWS
+++ b/etc/NEWS
@@ -2886,6 +2886,15 @@ can start with this line:
 
    #!/usr/bin/emacs --script
 
+** The option --directory DIR now modifies `load-path' immediately.
+Directories are added to the front of `load-path' in the order they
+appear on the command line.  For example, with this command line:
+
+  emacs -batch -L .. -L /tmp --eval "(require 'foo)"
+
+Emacs looks for library `foo' in the parent directory, then in /tmp, then
+in the other directories in `load-path'.  (-L is short for --directory.)
+
 +++
 ** A function's docstring can now hold the function's usage info on
 its last line.  It should match the regexp "\n\n(fn.*)\\'".
