Added reference to the new `etags --help --lang=LANG' option.

--- a/etc/etags.1
+++ b/etc/etags.1
@@ -266,7 +266,8 @@ Instead of generating a tag file, write a cross reference (in
 \fBcxref\fP format) to standard output.  Only \fBctags\fP accepts this option.
 .TP
 .B \-h, \-H, \-\-help
-Print usage information.
+Print usage information.  Followed by one or more \-\-language=LANG
+prints detailed information about how tags are created for LANG.
 .TP
 .B \-V, \-\-version
 Print the current version of the program (same as the version of the
