--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-08  Francesco Potort,Al(B  <pot@gnu.org>
+
+	* etags.c: [LONG_OPTIONS]: make it TRUE (ifdef) or FALSE (ifndef)
+	for ease of use.
+
 2004-07-17  Richard M. Stallman  <rms@gnu.org>
 
 	* emacsclient.c (quote_file_name): Pass COPY thru %s to output it.
