--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-08  Juri Linkov  <juri@jurta.org>
+
+	* mini.texi (Minibuffer History): Add `history-delete-duplicates'.
+
 2004-09-08  Dhruva Krishnamurthy  <dhruva.krishnamurthy@gmail.com>  (tiny change)
 
 	* makefile.w32-in: Fix PGG and Sieve entries.
