--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-08  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* minibuf.c (history_delete_duplicates): New variable.
+	(read_minibuf): Use it.
+	(syms_of_minibuf): Create the corresponding lisp variable.
+
 2004-09-08  Kim F. Storm  <storm@cua.dk>
 
 	* xdisp.c (set_cursor_from_row): Also look at 'cursor' property in
