--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-08  Richard M. Stallman  <rms@gnu.org>
+
+	* xdisp.c (Fformat_mode_line): New arg BUFFER says which buffer to use.
+
 2004-09-08  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* minibuf.c (history_delete_duplicates): New variable.
