--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,7 @@
 2004-09-08  Richard M. Stallman  <rms@gnu.org>
 
+	* window.c (Fset_window_buffer): Doc fix.
+
 	* xdisp.c (Fformat_mode_line): New arg BUFFER says which buffer to use.
 
 2004-09-08  Dan Nicolaescu  <dann@ics.uci.edu>
