--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-09  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* makefile.w32-in (sieve, pgg): Use $(infodir).
+
 2004-09-08  Juri Linkov  <juri@jurta.org>
 
 	* mini.texi (Minibuffer History): Add `history-delete-duplicates'.
