--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-09  Thien-Thi Nguyen  <ttn@gnu.org>
+
+	* MORE.STUFF (EDB): Update entry.
+
 2004-09-07  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* e/eterm.ti: Add `op' entry to enable colors in term.
