--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-09  Richard M. Stallman  <rms@gnu.org>
+
+	* xdisp.c (decode_mode_spec): Use current buffer for most purposes.
+
 2004-09-08  Richard M. Stallman  <rms@gnu.org>
 
 	* window.c (Fset_window_buffer): Doc fix.
