--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-09  Lars Hansen  <larsh@math.ku.dk>
+
+	* desktop.el (desktop-clear-preserve-buffers): Remove
+	make-obsolete-variable.
+
 2004-09-08  Stefan  <monnier@iro.umontreal.ca>
 
 	* vc-arch.el (vc-arch-state): Fix parsing for `names' method.
