--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-10  Eli Zaretskii  <eliz@gnu.org>
+
+	* msdos.c (msdos_set_cursor_shape): Add debugging print-out to
+	termscript.
+
 2004-09-09  Richard M. Stallman  <rms@gnu.org>
 
 	* xdisp.c (decode_mode_spec): Use current buffer for most purposes.
