--- a/etc/NEWS
+++ b/etc/NEWS
@@ -617,6 +617,8 @@ version 4.7 or newer, compiles to Info pages with embedded images.
 'sql-sqlite'.
 
 ** BibTeX mode:
+*** The new command bibtex-url browses a URL for the BibTeX entry at
+point (bound to C-c C-l and mouse-2 on clickable fields).
 *** The new command bibtex-entry-update (bound to C-c C-u) updates
 an existing BibTeX entry.
 *** New `bibtex-entry-format' option `required-fields', enabled by default.
